 * Scaling, shifting and rotation operations on dimensions are now multithreaded for increased performance
 * When changing the map format, the Resources layer settings are now automatically adjusted to turn off resources which are not supported in the new map format. Note that this change is not automatically reverted if the map format is changed back.

-- Version 2.25.1, released 10-07-2025

 * Bug fix: make Ceiling Dimensions work under y = 0.
 * Bug fix: fix a crash related to applying biomes from Ceiling Dimensions, e.g. patches of lush or dripstone caves
 * Bug fix: apply biomes from Ceiling Dimensions, e.g. patches of lush or dripstone caves, in the correct locations
 * Bug fix: revert an accidentally included change to the progress manager which made the Export progress bar jump around and give (even more) nonsensical times

-- Version 2.25.0, released 08-07-2025

 * WorldPainter now requires Java 17 or later! If necessary, you can download an appropriate version of Java using the links on www.worldpainter.net.
 * Some Export performance optimisations have been implemented for Stone Mix, Chasms and Perlin noise
   + For a typical world and settings you can expect a performance increase of roughly 25%
   + Depending on the selected Post Processing and Export settings the performance increase can rise significantly
   + With thanks to https://github.com/qf200011 for Stone Mix and Chasms and https://github.com/MCRcortex for Perlin noise
 * The Floating Dimension support has received some updates:
   + It is now in the Alpha Test rather than Preview stage
   + The "rounded" edge shape has been enabled for the edges of floating dimensions, and is now the default for new floating dimensions
   + Both surface and underground biomes of the floating dimension can now be exported. The height above the floor within which surface biomes are applied can be configured
   + The Resources layer settings tab is now enabled for floating dimension properties