@@ -10,6 +10,7 @@
    + Select "Only raise terrain" or "Only lower terrain" on the Tool Settings panel when the Flatten tool is selected to only flatten in the selected direction
  * Scaling, shifting and rotation operations on dimensions are now multithreaded for increased performance
  * When changing the map format, the Resources layer settings are now automatically adjusted to turn off resources which are not supported in the new map format. Note that this change is not automatically reverted if the map format is changed back.
+ * Bug fix: in the scripting API, the `installCustomTerrain()` function now returns the correct terrain index for later usage in e.g. `applyTerrain()`
 
 -- Version 2.25.1, released 10-07-2025
 
